--- a/src/app.html
+++ b/src/app.html
@@ -14,12 +14,11 @@
                 <div class="ui-titlebar">
                     <!--<div class="ui-titleicon"></div>-->
                     <div class="ui-titlecontrols">
-                        
-                        <button class="ui-btn minimize">
+                        <button class="ui-btn minimize" id="min">
                             <svg x="0px" y="0px" viewBox="0 0 10.2 1"><rect x="0" y="50%" width="10.2" height="1" /></svg>
-                        </button><button class="ui-btn maximize">
+                        </button><button class="ui-btn maximize" id="max">
                             <svg viewBox="0 0 10 10"><path d="M0,0v10h10V0H0z M9,9H1V1h8V9z" /></svg>
-                        </button><button class="ui-btn close">
+                        </button><button class="ui-btn close" id="close">
                             <svg viewBox="0 0 10 10"><polygon points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1" /></svg>
                         </button>
                         <img class="appIcon" src="../public/icons/appico.png">
@@ -29,6 +28,28 @@
     </div>
 </body>
 
+<script>
+    const remote = require('electron').remote;
 
-<script src="app.js"></script>
+    document.getElementById("min").addEventListener("click", function (e) {
+        var window = remote.getCurrentWindow();
+        window.minimize(); 
+    });
+
+    document.getElementById("max").addEventListener("click", function (e) {
+        var window = remote.getCurrentWindow();
+        if (!window.isMaximized()) {
+            window.maximize();          
+        } else {
+            window.unmaximize();
+        }
+    });
+
+    document.getElementById("close").addEventListener("click", function (e) {
+        var window = remote.getCurrentWindow()
+        window.close();
+    });
+</script>
+
+<script src="./app.js"></script>
 </html>
