--- a/src/app.html
+++ b/src/app.html
@@ -7,23 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="app">
+    <div class="div-one">
         <header>
-            <div class="appTitle">
-                
-                <div class="ui-titlebar">
-                    <!--<div class="ui-titleicon"></div>-->
-                    <div class="ui-titlecontrols">
-                        <button class="ui-btn minimize" id="min">
-                            <svg x="0px" y="0px" viewBox="0 0 10.2 1"><rect x="0" y="50%" width="10.2" height="1" /></svg>
-                        </button><button class="ui-btn maximize" id="max">
-                            <svg viewBox="0 0 10 10"><path d="M0,0v10h10V0H0z M9,9H1V1h8V9z" /></svg>
-                        </button><button class="ui-btn close" id="close">
-                            <svg viewBox="0 0 10 10"><polygon points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1" /></svg>
-                        </button>
-                        <img class="appIcon" src="../public/icons/appico.png">
-                    </div>
-                </div>
+            <button class="ui-btn minimize" id="min">
+                <svg x="0px" y="0px" viewBox="0 0 10.2 1"><rect x="0" y="50%" width="10.2" height="1" /></svg>
+            </button>
+            <button class="ui-btn maximize" id="max">
+                <svg viewBox="0 0 10 10"><path d="M0,0v10h10V0H0z M9,9H1V1h8V9z" /></svg>
+            </button>
+            <button class="ui-btn close" id="close">
+                <svg viewBox="0 0 10 10"><polygon points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1" /></svg>
+            </button>
+            <div class="div-two">
+                <legend>Over-Idle | Launcher</legend>
+            </div>
+            <div class="div-three">
+                <img src="../public/icons/appico.ico" width="48" height="48" style="border-radius: 50px;">
+            </div>
         </header>
     </div>
 </body>
