--- a/src/app.html
+++ b/src/app.html
@@ -34,11 +34,23 @@
 <br>
 <br>
 <br>
+    <span style="color: white; font-weight:bold; font-size: 23px;" id="date_heure"></span>
+    <script type="text/javascript">window.onload = date_heure('date_heure');</script>
 
     <div class="container">
-        <div class="text">
-            <span style="color: white; font-weight:bold; font-size: 23px;" id="date_heure"></span>
-            <script type="text/javascript">window.onload = date_heure('date_heure');</script>
+        <div class="text">            
+            <br>
+            <h1 style="color: white;">Connectez-vous</h1>
+            <form>
+                <input type="email" placeholder="E-mail">
+                <br>
+                <br>
+                <input type="password" placeholder="Password">
+                <br>
+                <br>
+                <br>
+                <input type="button" value="Connexion"> 
+            </form>
         </div>
     </div>
 
